IDEX-213 add WebWorker GWT API